<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shuttlesmgmt.activity.MainActivity">

    <Button
        android:id="@+id/btn_achat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Achats"
        tools:text="@string/button_achats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_stock"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="74dp" />

    <Button
        android:id="@+id/btn_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stock"
        tools:text="@string/button_stock"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_achat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_achat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bonjour, appuyer sur l'un des 3 buttons"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="16dp"
        tools:text="@string/text" />

    <Button
        android:id="@+id/btn_dbAchat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DBAchat"
        tools:text="DBAchat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="134dp"
        android:layout_marginLeft="161dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
