<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Version2.DBActivity.ProductActivity">
    <TextView
        android:id="@+id/id_prix"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:text="Prix/u"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/idQuantite"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/idQuantite"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:text="Quantité"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/idRef"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nomStock" />

    <TextView
        android:id="@+id/idMarque"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:text="Marque"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nomMarque" />

    <TextView
        android:id="@+id/idRef"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="Référence"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/idMarque"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nomRef" />

    <ListView
        android:id="@+id/id_listProduct"
        android:layout_width="367dp"
        android:layout_height="478dp"
        tools:layout_editor_absoluteX="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintVertical_bias="0.416" />
</android.support.constraint.ConstraintLayout>
